# catalyst

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  catalyst.code-workspace  main.cpp
IO/: IO.h
Log/: Log.cpp  Log.h
Model/: Model.cpp  Model.h
Model/NeuralNetwork/: NeuralNetwork.cpp
docs/: ARCHITECTURE_REVIEW.md  BRANCH_GUIDE.md
matrixops/: matrixops.h
source/: CMakeLists.txt
source/AsyncLogger/: AsyncLogger.h
source/Block/: Block.cpp  Block.h
source/DataLoader/: DataLoader.cpp  DataLoader.h
source/Dataset/: Dataset.cpp  Dataset.h
source/GPUOps/: GPUOps_types.h
source/GPUOps/Kernel/: Kernel.h
source/IO/: IO.cpp  IO.h
source/Log/: Log.cpp  Log.h
source/LogBook/: LogBook.cpp  LogBook.h  LogBook.tpp  Logbook.h
source/LogEntry/: Datum.h  LogEntry.cpp  LogEntry.h
source/LogEntry/CheckpointLogEntry/: CheckpointLogEntry.cpp  CheckpointLogEntry.h
source/LogEntry/DataList/: DataList.cpp  DataList.h
source/LogEntry/Datum/: Datum.cpp  Datum.h
source/LogEntry/DebugLogEntry/: DebugLogEntry.cpp  DebugLogEntry.h
source/LogEntry/EvaluationLogEntry/: EvaluationLogEntry.cpp  EvaluationLogEntry.h
source/LogEntry/SystemLogEntry/: SystemLogEntry.cpp  SystemLogEntry.h
source/Logger/: Logger.h
source/Model/: Model.cpp  Model.h
source/Model/NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h
source/ModelHistory/: ModelHistory.cpp  model_history.cpp  model_history.h
source/computationgraph/CGGraph/: CGGraph.cpp  CGGraph.h
source/computationgraph/CGGraphBuilder/: CGGraphBuilder.h
source/computationgraph/CGNode/: CGNode.cpp  CGNode.h
source/datahandlers/: DataLoader.h  Dataset.h
source/datahandlers/DataLoader/: DataLoader.cpp
source/datahandlers/Dataset/: Dataset.cpp  Dataset.h
source/datastores/: DataList.h  Datum.h  IDataList.h
source/datastores/DataList/: DataList.cpp  DataList.h
source/datastores/Datum/: Datum.h
source/errors/: DeserialisationError.h
source/gpuops/Kernel/: Kernel.h
source/gpuops/Kernel/MatmulKernel/: MatmulKernel.h
source/gpuops/Kernel/ReluKernel/: ReluKernel.h
source/gpuops/Kernel/SoftmaxKernel/: SoftmaxKernel.h
source/gpuops/KernelCacheSingleton/: KernelCacheSingleton.h
source/gpuops/KernelFactory/: KernelFactory.h
source/gpuops/KernelManagerSingleton/: KernelManagerSingleton.h
source/io/: io.cpp  io.h
source/logging/LogBook/: LogBook.cpp  LogBook.h
source/logging/LogEntry/: LogEntry.cpp  LogEntry.h
source/logging/LogEntry/CheckpointLogEntry/: CheckpointLogEntry.cpp  CheckpointLogEntry.h
source/logging/LogEntry/DebugLogEntry/: DebugLogEntry.cpp  DebugLogEntry.h
source/logging/LogEntry/EvaluationLogEntry/: EvaluationLogEntry.h
source/logging/LogEntry/SystemLogEntry/: SystemLogEntry.cpp  SystemLogEntry.h
source/matplotlibcpp/: matplotlibcpp.h
source/matrixops/: matrixops.cpp
source/tensorops/: GPUTensorStrategy.h  TensorOps.cpp  TensorOps.h  TensorOpsExecutionStrategy.h  TensorOpsSelector.cpp  TensorOpsSelector.h  maths_typedefs.h  tensor_types.h  tensorops.cpp  tensorops.h
source/tensorops/TensorStrategy/: TensorStrategy.h
source/tensorops/TensorStrategy/CPUStrategy/: CPUStrategy.cpp  CPUStrategy.h
source/tensorops/TensorStrategy/GPUStrategy/: GPUStrategy.cpp  GPUStrategy.h
source/vis/: vis.cpp
tests/: CMakeLists.txt  dummy_test.cpp  run_tests.cpp  run_tests.h  test_Model.cpp  test_TensorOps_using_GPUStrategy.cpp  test_dataset.cpp  test_io.cpp  test_logbook.cpp
tests/LogEntry/: test_DebugLogEntry.cpp
tests/computationgraph/: test_CGGraph.cpp  test_CGNode.cpp
tests/tensorops/: test_TensorOpsSelector.cpp  test_TensorOpsSelector_using_CPUStrategy.cpp  test_TensorOpsSelector_using_GPUStrategy.cpp  test_TensorOps_using_CPUStrategy.cpp
tests/unit/: CMakeLists.txt  test_Model.cpp  test_dataloader.cpp  test_dataset.cpp  test_io.cpp  test_logbook.cpp  test_model.cpp  test_modelhistory.cpp  test_tensorops.cpp
tests/unit/LogEntry/: test_CheckpointLogEntry.cpp  test_DebugLogEntry.cpp  test_EvaluationLogEntry.cpp  test_LogEntry.cpp  test_SystemLogEntry.cpp
vis/: vis.cpp  vis.h
